Fix T73483: Mantaflow: Smoke inflow in liquid domain emits liquid

Added an extra check in the flow object loop that compares flow object type and domain type prior to writing to flow maps.